
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {scalar_t__ main_pid; } ;
typedef TYPE_1__ Service ;


 int UNIT (TYPE_1__*) ;
 int assert (TYPE_1__*) ;
 int unit_unwatch_pid (int ,scalar_t__) ;

__attribute__((used)) static void service_unwatch_main_pid(Service *s) {
        assert(s);

        if (s->main_pid <= 0)
                return;

        unit_unwatch_pid(UNIT(s), s->main_pid);
        s->main_pid = 0;
}
